Agrego titulo centrado al index.html

--- a/public-html/index.html
+++ b/public-html/index.html
@@ -130,11 +130,16 @@
             height: 100%;
             padding: 0;
             margin: 0;
+			
         }
+		.titulo{text-align: center;}
+		
         </style>
         <title></title>
     </head>
     <body>
+ 		
+    <h2 class="titulo"> MAPA DE LAS ALDEAS EN EL PARQUE NACIONAL MICO QUEMADO	</h2>
         <div id="map">
             <div id="popup" class="ol-popup">
                 <a href="#" id="popup-closer" class="ol-popup-closer"></a>
